--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
+		"mongodb": "^4.1.3",
 		"ts-node-dev": "^1.1.8",
 		"typescript": "^4.4.4"
 	},
