--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "index.js",
 	"dependencies": {
 		"@types/express": "^4.17.13",
+		"@types/mongodb": "^4.0.7",
 		"body-parser": "^1.19.0",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
